run-in-minikube/cluster/hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  selector:
    matchLabels:
      run: hello-world
  replicas: 1
  template:
    metadata:
      labels:
        run: hello-world
    spec:
      containers:
        - name: hello-world
          image: mgh35/hello-world:0.1.1
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    run: hello-world
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nemesis
spec:
  selector:
    matchLabels:
      run: hello-nemesis
  replicas: 1
  template:
    metadata:
      labels:
        run: hello-nemesis
    spec:
      containers:
        - name: hello-nemesis
          image: mgh35/hello-world:0.1.1
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-nemesis
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    run: hello-nemesis
---
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
 name: ingress
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
 - http:
     paths:
     - path: /world
       backend:
         serviceName: hello-world
         servicePort: 5000
     - path: /nemesis
       backend:
         serviceName: hello-nemesis
         servicePort: 5000
